--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.42.0",
     "react": "^18.2.0",
+    "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
